[metadata]
name = gethash
version = attr: gethash.__version__
platforms = any
description = Command-line hash utility
long_description = file: README.md
long_description_content_type = text/markdown
author = xymy
author_email = thyfan@163.com
maintainer = xymy
maintainer_email = thyfan@163.com
license = MIT
license_files = LICENSE
url = https://github.com/xymy/gethash
project_urls =
    Documentation = https://github.com/xymy/gethash
    Issue Tracker = https://github.com/xymy/gethash/issues
    Source Code = https://github.com/xymy/gethash
keywords = cryptography, hash, utility
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = True
python_requires = >=3.8
install_requires =
    click>=8.0
    click-didyoumean>=0.3
    click-option-group>=0.5
    natsort>=8.1
    tqdm>=4.60
    importlib-metadata>=4.4; python_version < "3.10"

[options.entry_points]
console_scripts =
    gethash = gethash.__main__:main
    crc32 = gethash.cli.crc32:main
    md5 = gethash.cli.md5:main
    sha1 = gethash.cli.sha1:main
    sha256 = gethash.cli.sha256:main
    sha512 = gethash.cli.sha512:main
    sha3-256 = gethash.cli.sha3_256:main
    sha3-512 = gethash.cli.sha3_512:main
    blake2b = gethash.cli.blake2b:main
    blake2s = gethash.cli.blake2s:main
gethash.commands =
    crc32 = gethash.cli.crc32:main
    md5 = gethash.cli.md5:main
    sha1 = gethash.cli.sha1:main
    sha256 = gethash.cli.sha256:main
    sha512 = gethash.cli.sha512:main
    sha3-256 = gethash.cli.sha3_256:main
    sha3-512 = gethash.cli.sha3_512:main
    blake2b = gethash.cli.blake2b:main
    blake2s = gethash.cli.blake2s:main

[options.extras_require]
all =
    pycryptodome>=3.10
dev =
    black>=22.3
    isort>=5.10
    flake8>=4.0
    flake8-bugbear>=22.4
    flake8-comprehensions>=3.10
    flake8-implicit-str-concat>=0.3
    flake8-simplify>=0.19
    mypy>=0.960

[options.packages.find]
where = src
