[metadata]
name = gethash
version = attr: gethash.__version__
platforms = any
description = Command-line hash utility
long_description = file: README.md
long_description_content_type = text/markdown
author = xymy
author_email = thyfan@163.com
maintainer = xymy
maintainer_email = thyfan@163.com
license = MIT
license_files = LICENSE
url = https://github.com/xymy/gethash
project_urls =
    Documentation = https://github.com/xymy/gethash
    Issue Tracker = https://github.com/xymy/gethash/issues
    Source Code = https://github.com/xymy/gethash
keywords = cryptography, hash, utility
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = True
python_requires = >=3.8
install_requires =
    click>=8.1
    click-didyoumean>=0.3
    click-option-group>=0.5
    natsort>=8.1
    tqdm>=4.60
    importlib-metadata>=4.4

[options.entry_points]
console_scripts =
    gethash = gethash.__main__:main
    crc32 = gethash.cli.crc32:main
    md5 = gethash.cli.md5:main
    sha1 = gethash.cli.sha1:main
    sha256 = gethash.cli.sha256:main
    sha512 = gethash.cli.sha512:main
    sha3-256 = gethash.cli.sha3_256:main
    sha3-512 = gethash.cli.sha3_512:main
    blake2b = gethash.cli.blake2b:main
    blake2s = gethash.cli.blake2s:main
gethash.commands =
    crc32 = gethash.cli.crc32:main
    md5 = gethash.cli.md5:main
    sha1 = gethash.cli.sha1:main
    sha256 = gethash.cli.sha256:main
    sha512 = gethash.cli.sha512:main
    sha3-256 = gethash.cli.sha3_256:main
    sha3-512 = gethash.cli.sha3_512:main
    blake2b = gethash.cli.blake2b:main
    blake2s = gethash.cli.blake2s:main
gethash.backends =
    hashlib = gethash.backends.hashlib:load
    pycryptodome = gethash.backends.pycryptodome:load
    wrappers = gethash.backends.wrappers:load

[options.extras_require]
all =
    pycryptodome>=3.12
docs =
    sphinx>=5.2
    furo>=2022.9
    myst-parser[linkify]>=0.18
    sphinx-copybutton>=0.5
lint =
    black>=23.10
    ruff>=0.1
    mypy>=1.6
test =
    coverage>=7.3
    hypothesis>=6.86
    pytest>=7.4
    pytest-cov>=4.1

[options.packages.find]
where = src
